# PanoSAMic

./: .gitignore  NOTICE  PRE_PUBLICATION_CHECKLIST.md  README.md  pyproject.toml
config/: config_baseline.json  config_matterport3d_dv.json  config_stanford2d3ds_dv.json  config_stanford2d3ds_sv.json
panosamic/data_preparation/: matterport3d.py  stanford2d3ds.py  structured3d.py
panosamic/datasets/: __init__.py  augmentations.py  base.py  dataset_builder.py  matterport3d.py  stanford2d3ds.py  structured3d.py
panosamic/evaluation/: __init__.py  evaluate.py  evaluator.py  loss.py  metrics.py  scheduler.py  train.py  trainer.py  vanilla_sam.py
panosamic/evaluation/utils/: config.py  data.py  distributed_handler.py  efficiency.py  parser.py  slurm_utils.py
panosamic/model/: __init__.py  cached_prompt_encoder.py  image_encoder.py  initialization.py  instance_semantic_fusion.py  mask_fusion.py  mask_postprocessing.py  model_builder.py  panosamic_net.py  prompt_validator.py  semantic_decoder.py
panosamic/model/attention/: __init__.py  attention_builder.py  channel_attention.py  moving_attention.py  spatial_attention.py
panosamic/model/fusion/: __init__.py  basic_fusion.py  feature_fusion.py
scripts/: eval_panosamic_multifold.py  eval_sam3_panosamic.py  local_eval.sh  local_train.sh  run_panosamic_eval_matterport.sh  run_panosamic_eval_multifold.sh  run_panosamic_eval_stanford2d3ds_edges.sh  run_panosamic_eval_stanford2d3ds_sv.sh  run_sam3_eval_matterport3d.sh  run_sam3_eval_stanford2d3ds.sh
